--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
     "node-sass": "4.13.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-redux": "^7.2.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "esversion": 6
   },
   "browserslist": {
     "production": [
